// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultInput test1 1`] = `
<div
  className="d-flex flex-column"
>
  <LandingInput
    disabled={false}
    error={false}
    placeholder="Email"
    type="text"
    warning={false}
  />
  <DefaultInput__Message
    className="my-1"
  >
    <UNDEFINED
      error={false}
      touched={false}
      warning={false}
    />
  </DefaultInput__Message>
</div>
`;

exports[`DefaultInput test2, touched, error - true 1`] = `
<div
  className="d-flex flex-column"
>
  <LandingInput
    disabled={false}
    error={
      Object {
        "id": "app.containers.HomePage.title",
      }
    }
    placeholder="Email"
    type="text"
    warning={false}
  />
  <DefaultInput__Message
    className="my-1"
  >
    <UNDEFINED
      error={
        Object {
          "id": "app.containers.HomePage.title",
        }
      }
      touched={true}
      warning={false}
    />
  </DefaultInput__Message>
</div>
`;
